Fixing an error check for sql data sources and adding support for project...