@@ -1,6 +1,7 @@
 package org.gorpipe.gor.auth;
 
 import com.google.common.base.Strings;
+import org.gorpipe.exceptions.GorSecurityException;
 import org.gorpipe.util.RegexpUtils;
 import org.gorpipe.exceptions.GorSystemException;
 import org.slf4j.Logger;
@@ -14,7 +15,7 @@ import java.util.stream.Collectors;
 public class GorAuthRoleMatcher {
     private static final Logger log = LoggerFactory.getLogger(GorAuthRoleMatcher.class);
 
-    private static Map<String, Pattern> patternCache = new ConcurrentHashMap<>();
+    private static final Map<String, Pattern> patternCache = new ConcurrentHashMap<>();
 
     public static final String PROJECT_REGEX = "prj:";
     public static final String DELIMITER = ":";
@@ -22,7 +23,7 @@ public class GorAuthRoleMatcher {
     public static final String SYSTEM_ADMIN_ROLE = "system_admin";
 
     public static boolean hasRolebasedSystemAdminAccess(GorAuthInfo authInfo) {
-        return matchRolePatterns(authInfo.getUserRoles(), Arrays.asList(SYSTEM_ADMIN_ROLE));
+        return matchRolePatterns(authInfo.getUserRoles(), List.of(SYSTEM_ADMIN_ROLE));
     }
 
     /**
@@ -38,7 +39,7 @@ public class GorAuthRoleMatcher {
             log.warn(String.format("User '%s' in project '%s' does not have access to subject '%s' with any of '%s'",
                     authInfo.getUsername(), authInfo.getProject(), subject,
                     Arrays.stream(authorizationActions).map(a -> a.value).collect(Collectors.joining(","))));
-            throw new GorSystemException(String.format("User '%s' in project '%s' does not have access.",
+            throw new GorSecurityException(String.format("User '%s' in project '%s' does not have access.",
                     authInfo.getUsername(), authInfo.getProject()), null);
         }
     }
